@@ -21,7 +21,10 @@ OK - fix: display "include Foo" instead of "include module Foo" in Latex, Man, T
 OK - fix: not display comments associated to include directives
 OK - fix: bad display of type parameters for class and class types
 - need to fix display of type parameters for inherited classes/class types
-
+OK - fix: html generator: included module names were displayed with their simple
+     name rather than their fully qualified name
+OK - fix: use a formatter from a buffer rather Format.str_formatter in
+     Odoc_mist.sting_of_module_type, to avoid too much blanks
 
 ======
 
